# mesa

./: .clang-format-ignore  .clang-format-include  .gitignore  .gitlab-ci.yml  .mailmap  .mr-label-maker.yml  .pick_status.json  CODEOWNERS  VERSION  clippy.toml  meson.build  meson.options
docs/: .gitignore  bugs.rst  conf.py  conform.rst  developing-extensions.rst  envvars.rst  faq.rst  features.txt  gitlab-ci.yml  helpwanted.rst  index.rst  install.rst  meson.build  perf.rst  perfetto.rst  precompiled.rst  release-calendar.csv  releasing.rst  relnotes.rst  rust.rst  shading.rst  sourcetree.rst  submittingpatches.rst  systems.rst  teflon.rst  xlibdriver.rst
docs/_extra/: _redirects
docs/_exts/: bootstrap.py  depfile.py  formatting.py  nir.py  redirects.py
docs/ci/: bare-metal.rst  docker.rst  drm-shim.rst  index.rst  kernel.rst
docs/drivers/: anv.rst  freedreno.rst  kosmickrisp.rst  lima.rst  nvk.rst  panfrost.rst  powervr.rst  radv.rst  vc4.rst  venus.rst  zink.rst
docs/drivers/amd/: function-calls.rst  hang-debugging.rst  live-var-analysis.rst
docs/drivers/freedreno/: fdm.rst
docs/drivers/kosmickrisp/: workarounds.rst
docs/drivers/nvk/: hardware_docs.rst  isbe_layout.rst  mesh_shading_notes.rst
docs/drivers/panfrost/: drm-shim.rst  varyings.rst
docs/gallium/: context.rst  index.rst  screen.rst  tgsi.rst
docs/graphics-debugging/: debugging-misrenderings-crashes.rst
docs/header-stubs/: vk_dispatch_table.h  vk_extensions.h
docs/mesa3d_theme/: layout.html
docs/relnotes/: 25.3.0.rst  25.3.4.rst  25.3.5.rst  25.3.6.rst  26.0.0.rst  26.0.1.rst  26.0.2.rst  26.0.3.rst  26.0.4.rst  26.0.5.rst  26.0.6.rst  26.0.7.rst  26.0.8.rst  26.1.0.rst  26.1.1.rst  26.1.2.rst  26.1.3.rst  26.1.4.rst  26.1.5.rst  6.5.3.rst  7.9.rst  new_features.txt
src/amd/vulkan/: 00-radv-defaults.conf  meson.build  radv_acceleration_structure.c  radv_aco_shader_info.h  radv_android.c  radv_android.h  radv_buffer.c  radv_buffer_view.c  radv_cmd_buffer.c  radv_cmd_buffer.h  radv_constants.h  radv_cp_dma.c  radv_cp_reg_shadowing.c  radv_cs.c  radv_cs.h  radv_debug.c  radv_debug.h  radv_debug_nir.c  radv_debug_nir.h  radv_descriptor_pool.c  radv_descriptor_set.c  radv_descriptor_set.h  radv_descriptor_update_template.c  radv_descriptor_update_template.h  radv_descriptors.c  radv_descriptors.h  radv_device.c  radv_device.h  radv_device_memory.c  radv_dgc.c  radv_dgc.h  radv_drirc_gen.py  radv_event.c  radv_formats.c  radv_formats.h  radv_host_image_copy.c  radv_image.c  radv_image.h  radv_image_view.c  radv_image_view.h  (+49 more)
src/freedreno/: meson.build
src/freedreno/afuc/: README.rst
src/freedreno/ci/: deqp-freedreno-a618-vk.toml  deqp-freedreno-a660-vk.toml  deqp-freedreno-a750-vk.toml  deqp-tu-android.toml  freedreno-a200-fails.txt  freedreno-a200-flakes.txt  freedreno-a306-fails.txt  freedreno-a530-fails.txt  freedreno-a530-flakes.txt  freedreno-a618-android-cts-include.txt  freedreno-a618-android-cts-skips.txt  freedreno-a618-fails.txt  freedreno-a618-flakes.txt  freedreno-a618-skips.txt  freedreno-a618-slow-skips.txt  freedreno-a660-fails.txt  freedreno-a660-flakes.txt  freedreno-a660-skips.txt  freedreno-a660-slow-skips.txt  freedreno-a6xx-skips.txt  freedreno-a750-fails.txt  freedreno-a750-flakes.txt  freedreno-a750-skips.txt  freedreno-a750-slow-skips.txt  gitlab-ci-inc.yml  gitlab-ci.yml  restricted-traces-freedreno.yml  traces-freedreno-restricted.toml  traces-freedreno.yml
src/freedreno/common/: disasm.h  fd2_hw.h  fd3_hw.h  fd4_hw.h  fd5_hw.h  fd6_gmem_cache.h  fd6_hw.h  fd6_pack.h  fd_hw_common.h  freedreno_common.h  freedreno_dev_info.c  freedreno_dev_info.h  freedreno_dev_info.py  freedreno_devices.py  freedreno_gpu_event.h  freedreno_lrz.h  freedreno_pm4.h  freedreno_rd_output.c  freedreno_rd_output.h  freedreno_uuid.c  meson.build
src/freedreno/computerator/: a4xx.cc  a6xx.cc  main.cc  main.h
src/freedreno/decode/: buffers.c  buffers.h  cffdec.c  cffdec.h  cffdump-desc-handler.lua  cffdump-pkt-handler.lua  cffdump.c  crashdec-prefetch.c  crashdec.c  crashdec.h  meson.build  pgmdump.c  rdcompiler-utils.h  rddecompiler.c  replay.c  rnnutil.c  rnnutil.h  script.c  script.h  snapshot.h
src/freedreno/drm/: freedreno_bo.c  freedreno_bo_cache.c  freedreno_drm_perfetto.cc  freedreno_ringbuffer.c  freedreno_ringbuffer.h  freedreno_ringbuffer_sp.c
src/freedreno/drm-shim/: README.md  freedreno_noop.c
src/freedreno/ds/: fd_pps_a6xx.cc  fd_pps_a7xx.cc  fd_pps_a8xx.cc  fd_pps_driver.cc  fd_pps_driver.h  meson.build
src/freedreno/fdl/: fd5_layout_test.c  fd6_format_table.c  fd6_format_table.h  fd6_layout.c  fd6_tiled_memcpy.cc  fd6_view.cc  freedreno_layout.h  freedreno_lrz_layout.h  meson.build
src/freedreno/ir2/: disasm-a2xx.c  instr-a2xx.h
src/freedreno/ir3/: disasm-a3xx.c  instr-a3xx.h  ir3.c  ir3.h  ir3_a4xx.c  ir3_a6xx.c  ir3_alias.c  ir3_array_to_ssa.c  ir3_cf.c  ir3_compiler.c  ir3_compiler.h  ir3_compiler_nir.c  ir3_context.c  ir3_context.h  ir3_cp.c  ir3_dce.c  ir3_disk_cache.c  ir3_image.c  ir3_legalize.c  ir3_lexer.l  ir3_liveness.c  ir3_lower_parallelcopy.c  ir3_lower_subgroups.c  ir3_nir.c  ir3_nir.h  ir3_nir_analyze_ubo_ranges.c  ir3_nir_lower_64b.c  ir3_nir_lower_driver_params_to_ubo.c  ir3_nir_lower_io_offsets.c  ir3_nir_lower_layer_id.c  ir3_nir_lower_load_barycentric_at_offset.c  ir3_nir_lower_load_sample_pos.c  ir3_nir_lower_tess.c  ir3_nir_opt_algebraic_late.py  ir3_nir_opt_preamble.c  ir3_nir_trig.py  ir3_opt_predicates.c  ir3_parser.y  ir3_parser_support.c  ir3_postsched.c  (+14 more)
src/freedreno/isa/: ir3-cat1.xml  ir3-cat2.xml  ir3-cat3.xml  ir3-cat5.xml  ir3-cat6.xml
src/freedreno/perfcntrs/: fd2_perfcntr.c  fd5_perfcntr.c  fd6_perfcntr.c  fd7_perfcntr.c  fd8_perfcntr.c  fdperf.c  freedreno_perfcntr.c  freedreno_perfcntr.h  meson.build
src/freedreno/qrisc/: README.rst  asm.c  asm.h  disasm.c  emu-regs.c  emu-ui.c  emu.c  emu.h  isa.h  lexer.l  meson.build  parser.y  qrisc.h  qrisc.xml  util.c  util.h
src/freedreno/registers/: meson.build  (+1 more)
src/imgui/: meson.build
src/nouveau/: meson.build
src/panfrost/: .clang-format  .rustfmt.toml  meson.build
(+4643 files in other folders)
